# manage-vaccinations-in-schools-reporting

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tool-versions  .yamllint.yaml  Dockerfile  Makefile  Procfile.dev  README.md  jest.config.js  mise.development.toml  mise.local.toml.example  mise.production.toml  mise.staging.toml  mise.toml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build-and-push-image.yml  ci.yml  continuous-deployment.yml  deploy-application.yml  deploy.yml  lint-and-test.yaml
config/: container_variables.yml
config/credentials/: development.enc.yaml  development.key  production.enc.yaml  staging.enc.yaml
config/templates/: appspec.yaml.tpl
mavis/: startup.sh
mavis/reporting/: __init__.py  dev_proxy.py  gunicorn.conf.py  jinja2_config.py  views.py
mavis/reporting/api_client/: client.py
mavis/reporting/config/: __init__.py  jinja2.py
mavis/reporting/forms/: data_type_form.py  download_form.py  export_form.py
mavis/reporting/helpers/: auth_helper.py  breadcrumb_helper.py  date_helper.py  (+11 more)
mavis_reporting/: __init__.py  views.py
mavis_reporting/config/: __init__.py  jinja2.py
mavis_reporting/helpers/: auth_helper.py  mavis_helper.py  url_helper.py
mavis_reporting/templates/: download.jinja
scripts/: populate_ssm_parameters.py  populate_task_definition.py
tests/: conftest.py  helpers.py
tests/api_client/: conftest.py  test_client.py
tests/auth/: test_auth.py
tests/components/: test_app_dashboard_card.py
tests/helpers/: test_auth_helper.py  test_date_helper.py  test_environment_helper.py  test_mavis_helper.py  test_number_helper.py  test_text_helper.py  test_url_helper.py
tests/models/: test_organisation.py  test_team.py
tests/views/: test_download.py  test_exports.py  test_local_authorities.py  test_schools.py  test_start_download.py  test_views.py
(+41 files in other folders)
